@@ -118,9 +118,14 @@ function printsize($size, $decimals = 1)
 }
 
 /**
- * print the relative time in h:mm:ss format
+ * Print the relative time in h:mm:ss[.uuuuuu] format.
  */
-function printtimerel($rel_time) {
+function printtimerel($rel_time, $use_microseconds = FALSE)
+{
+	if ( $use_microseconds ) {
+		$frac_str = explode('.', sprintf('%.6f', $rel_time))[1];
+	}
+	$rel_time = (int) floor($rel_time);
 
 	$h = floor($rel_time/3600);
 	$rel_time %= 3600;
@@ -130,10 +135,14 @@ function printtimerel($rel_time) {
 		$m = '0' . $m;
 	}
 	$rel_time %= 60;
-	
+
 	$s = $rel_time;
 	if ($s < 10) {
 		$s = '0' . $s;
+	}
+
+	if ( $use_microseconds ) {
+		$s .= '.' . $frac_str;
 	}
 
 	return $h . ':' . $m . ':' . $s;
