@@ -7,6 +7,7 @@ Version 5.1.0 - DEV
  - Remove CHROOT_SCRIPT configuration setting: automatically run
    chroot-startstop.sh if a pre-built chroot tree is found.
  - Update ACE editor to version 1.2.2, JScolor to version 1.4.5.
+ - Support microsecond resolution contest times.
 
 Version 5.0.0 - 11 August 2015
 ------------------------------
